# xarray-cube

./: .buildinfo  .gitignore  .zenodo.json  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: xarray_cube.accessor.doctree  xarray_cube.converter.doctree  xarray_cube.cube.doctree  xarray_cube.doctree
.github/workflows/: gh-pages.yml  test.yml  tests.yml
_apidoc/: xarray_cube.accessor.html  xarray_cube.converter.html  xarray_cube.cube.html  xarray_cube.html
_modules/: index.html
_modules/xarray_cube/: accessor.html  converter.html  cube.html
_sources/: readme.rst.txt
_sources/_apidoc/: xarray_cube.accessor.rst.txt  xarray_cube.converter.rst.txt  xarray_cube.cube.rst.txt  xarray_cube.rst.txt
data/: GMC-8.spw16.12CO.7m.cube.pbcor.fits  cube-ones-3x3x3.nc  cube-ones-5x4x3.nc
docs/: build  conf.py  index.md  index.rst
tests/: test_accessor.py  test_converter.py  test_cube.py  test_metadata.py
xarray_cube/: __init__.py  accessor.py  convert.py  converter.py  cube.py
