[tool.poetry]
name = "xarray-cube"
version = "0.1.1"
description = "xarray extension for spectral cube analysis"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Rin Yamada <yamada@a.phys.nagoya-u.ac.jp>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/a-lab-nagoya/xarray-cube/"
documentation = "https://a-lab-nagoya.github.io/xarray-cube/"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
astropy = "^4.3"
numpy = "^1.19"
typing-extensions = "^3.10"
xarray-dataclasses = "^0.5"

[tool.poetry.dev-dependencies]
black = "^21.9b"
flake8 = "^3.9"
ipython = "^7.27"
matplotlib = "^3.4"
netcdf4 = "^1.5"
pydata-sphinx-theme = "^0.6"
pytest = "^6.2"
sphinx = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
