[tool.poetry]
name = "xarray-cube"
version = "0.3.0"
description = "xarray extension for spectral cube analysis"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Rin Yamada <yamada@a.phys.nagoya-u.ac.jp>",
    "Fumika Demachi <f.demachi@a.phys.nagoya-u.ac.jp>",
    "Takeru Nishioka <tnishioka@a.phys.nagoya-u.ac.jp>",
    "Kaoru Nishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/a-lab-nagoya/xarray-cube/"
documentation = "https://a-lab-nagoya.github.io/xarray-cube/"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
astropy = "^4.3"
numpy = "^1.19"
spectral-cube = ">=0.6, <0.7"
typing-extensions = "^3.10"
xarray = ">=0.18, <0.30"
xarray-dataclasses = "^0.9"

[tool.poetry.dev-dependencies]
black = "^22.1"
ipykernel = "^6.9"
ipython = "^7.31"
matplotlib = "^3.5"
myst-parser = "^0.16"
netcdf4 = "^1.5"
pydata-sphinx-theme = "^0.8"
pytest = "^7.0"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
